# webxploit-chain

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  builder.py  chain_engine.py  cli.py  example_findings.json  http_automation.py  models.py  pyproject.toml  reporter.py  scope.py  scope.yaml  test_core.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
configs/: custom_chains.yaml
docs/: API_GUIDE.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  GETTING_STARTED.md  README.md  TROUBLESHOOTING.md  WORKFLOWS.md
examples/: engagement_example.json  scope_example.yaml
tests/: test_core.py
webxploit/: __init__.py  cli.py
webxploit/core/: __init__.py  chain_engine.py  models.py  scope.py
webxploit/payloads/: __init__.py  builder.py
webxploit/reporting/: __init__.py  reporter.py
